2019-07-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-mailbox-node: Use modern macros to declare and define.

	* src/mailbox-node.h: declare BalsaMailboxNode final;
	* src/mailbox-node.c: use G_DEFINE_TYPE();
	(balsa_mailbox_node_class_init),
	(balsa_mailbox_node_init), (get_parent_folder_name),
	(add_imap_entry), (handle_imap_path), (mark_imap_path),
	(balsa_mailbox_node_set_dir), (balsa_mailbox_node_set_name),
	(balsa_mailbox_node_set_config_prefix),
	(balsa_mailbox_node_set_last_use_time),
	(balsa_mailbox_node_change_style): adapt;
	(balsa_mailbox_node_set_list_inbox),
	(balsa_mailbox_node_set_subscribed),
	(balsa_mailbox_node_set_scanned), (balsa_mailbox_node_get_mailbox),
	(balsa_mailbox_node_get_name),
	(balsa_mailbox_node_get_config_prefix),
	(balsa_mailbox_node_get_last_use_time),
	(balsa_mailbox_node_get_server), (balsa_mailbox_node_get_style),
	(balsa_mailbox_node_get_subscribed),
	(balsa_mailbox_node_get_scanned),
	(balsa_mailbox_node_get_list_inbox),
	(balsa_mailbox_node_get_delim), (balsa_mailbox_node_get_dir),
	(balsa_mailbox_node_get_parent): new functions;
	* libbalsa/folder-scanners.h:
	* libinit_balsa/assistant_page_user.c (create_imap_mbx):
	* src/balsa-app.c (find_mailbox), (find_path), (find_url),
	(balsa_find_mailbox_by_url), (balsa_get_short_mailbox_name),
	(balsa_find_iter_by_data_func), (ba_remove_children_mailbox_nodes),
	(balsa_remove_children_mailbox_nodes):
	* src/balsa-index.c (bndx_destroy), (bndx_selection_changed_idle),
	(bndx_selection_changed), (bndx_find_current_msgno),
	(bndx_scroll_on_open_idle), (balsa_index_load_mailbox_node),
	(bndx_search_iter), (bndx_search_iter_and_select),
	(bndx_mailbox_changed_idle), (balsa_index_selected_msgnos_new),
	(balsa_index_selected_msgnos_free), (bndx_view_source),
	(bndx_compose_foreach), (bndx_compose_from_list), (bndx_do_delete),
	(balsa_message_move_to_trash), (balsa_find_notebook_page_num),
	(balsa_index_toggle_flag), (bi_toggle_deleted_cb), (mru_menu_cb),